Fixed #223, scrolling outline overflow.

--- a/peruse.css
+++ b/peruse.css
@@ -499,6 +499,9 @@ a .outline-header-active {
 		box-shadow: 0px -1px 2px rgba(0,0,0,.25);
 		backdrop-filter: blur(10px);
 		-webkit-backdrop-filter: blur(10px);
+		/* Cap height at window size. If the content is too tall, scroll it. */
+		max-height: 100%;
+		overflow-y: scroll;
 	}
 
 	/* Make a little centered box to store the outline to preserve its left aligned structure, while making it easier to click. */
